added JS and homeWork 18.08.23 2.01